# oqni

./: .gitignore  README.md  example.cpp  read_data.cpp  reading_from_port.cpp  writing_to_port.cpp
COM_port_reader/: CMakeLists.txt  ResourceFiles.qrc  mainwindow.cpp  mainwindow.ui
COM_port_reader/Includes/: all.hpp  comport.hpp  mainwindow.h  settingswindow.hpp  threaddisplaytimer.hpp  threaddrawer.hpp  threadreader.hpp  windowchart.hpp  windownext.hpp  windowsaveto.hpp
COM_port_reader/Srcs/: comport.cpp  main.cpp  mainwindow.cpp  reader_win.cpp  settingswindow.cpp  threaddisplaytimer.cpp  threaddrawer.cpp  threadreader.cpp  threadruner.cpp  windowchart.cpp  windownext.cpp  windowsaveto.cpp
Data_logger/: CMakeLists.txt  ResourceFiles.qrc
Data_logger/Includes/: all.hpp  comport.hpp  debugger.hpp  errorlogger.hpp  mainwindow.h  threaddisplaytimer.hpp  threadreader.hpp  threadruner.hpp  windowchart.hpp  windownext.hpp
Data_logger/Srcs/: comport.cpp  debugger.cpp  errorlogger.cpp  main.cpp  mainwindow.cpp  threaddisplaytimer.cpp  threadreader.cpp  windowchart.cpp  windownext.cpp
Recordings/: metadata.xlsx
exp_protocols/: Exp#1_60s.csv  Exp#2.csv  Exp#3_35s.csv  Exp#4.csv  Exp#5_14s.csv  Short#1_6s.csv
